--- a/public/css/login.css
+++ b/public/css/login.css
@@ -82,7 +82,7 @@ li {
     border: none;
     width: 190px;
     padding-left: 12px;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid #80083F;
 }
 
 .boton{
