--- a/src/views/users/editar-perfil.ejs
+++ b/src/views/users/editar-perfil.ejs
@@ -101,8 +101,8 @@
             <% if(locals.errors && errors.password) {%>
             <div class="text-danger"><%= errors.password.msg %></div>
             <% } %>
+            <div class="buttons">
             <input class="edit-button" type="submit" value="Actualizar" />
-            <div class="back">
               <a class="back-button" href="/users/perfil">Volver</a>
             </div>
           </div>
