--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -71,7 +71,7 @@ li {
     border: none;
     width: 190px;
     padding-left: 12px;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid #80083F;
 }
 .caja-links{
     display: flex;
