--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,7 +8,7 @@
     <div class="nav-bar-phone">
         <div class="icons"><i class="fas fa-bars icono.menu"></i></div>
         <!-- Creando, formulario buscador -->
-        <form method="get" action="/" class="search">
+        <form method="get" action="/search" class="search">
             <div class="box-buscador">
                 <input class="buscador" type="text" name="buscador" placeholder="Buscar..." required minlength="3" >
                 <div class="lupa">
@@ -32,7 +32,7 @@
     </nav>
     <div class="icons-box">
         <!-- Creando, formulario buscador -->
-        <form method="get" action="/" class="search-desktop">
+        <form method="get" action="/products/search" class="search-desktop">
             <div class="box-buscador-desktop">
                 <input class="buscador-desktop" type="text" name="buscador" placeholder="Buscar..." required>
                 <div class="lupa-desktop">
@@ -55,6 +55,7 @@
 
                 <%}%>
     </div>
+    
             
 
   </header>
