--- a/public/css/editar-product.css
+++ b/public/css/editar-product.css
@@ -5,6 +5,11 @@ main{
 .contenedor-titulo {
   margin: 10px 40px;
 }
+li {
+  list-style-type: none;
+  text-align: center;
+
+}
 .title{
   font-family: 'Roboto', sans-serif;
   display: flex;
