--- a/src/views/products/confirmar-compra.ejs
+++ b/src/views/products/confirmar-compra.ejs
@@ -9,10 +9,10 @@
   <body>
     <%- include("../partials/header.ejs") %>
     <main>
-        <div class="contenedor-titulo">
-            <div class="content">
-                <h1 class="pregunta">Su compra fue realizada con exito</h1>
-                <h1 class="product">Muchas grascias!</h1>
+          <div class="contenedor-titulo">
+            <h3 class="recomendaciones">Su compra fue realizada con éxito</h3>
+          </div>
+                <h1 class="">Muchas gracias!</h1>
             </div>
         </div>
     </main>
