--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -1,8 +1,5 @@
 /*************** Body ***************/
-main{
-    margin-top: 120px;
-    padding: 20px 20px;
-}
+
 .contenedor-titulo {
     margin: 10px 40px;
 }
@@ -19,7 +16,7 @@ main{
 }
 table {
     margin: 0 auto;
-    width: 60%; 
+    width: 80%; 
   }
 .table-header{
     text-align: center;
@@ -114,6 +111,8 @@ table {
     justify-content: space-between;
     justify-content: center;
     padding: 20px 5px;
+    min-height: 90%;
+    justify-content: space-between;
 
 }
 .column{
@@ -161,6 +160,32 @@ table {
     justify-content: space-around;
   
   }
+  .boton-eliminar{
+    background-color: white;
+    border: none;
+    color: #80083F;
+  }
+  .boton-eliminar:hover{
+    text-decoration: underline;
+  }
+  .content{
+    display: flex;
+    padding: 20px 0;
+    font-weight: 300;
+    margin: 94px 70px;
+    color: #666;
+    flex-direction: row;
+    justify-content: flex-start;
+    font-size: 25px;
+    margin: 160px;
+}
+thead{
+    color: #666;
+    font-size: 25px;
+}
+tbody{
+    color: #666;
+}
 /*************** Navegacion Tablets *********/
 
 @media (min-width: 769px){  
