--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -20,6 +20,9 @@ footer{
     padding: 20px;
     display: flex;
     flex-direction: column;
+    margin-top: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 .display-footer{
